--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,65 @@
 apply plugin: 'com.android.application'
 
+def depend_android = rootProject.ext.depend_android
+def depend_lib = rootProject.ext.depend_lib
+
+
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    signingConfigs {
+        release {
+            storeFile file('my.jks')
+            storePassword '123456'
+            keyAlias 'DrySister'
+            keyPassword '654321'
+        }
+    }
+    compileSdkVersion depend_android["compileSdkVersion"]
+    buildToolsVersion depend_android["buildToolsVersion"]
     defaultConfig {
-        applicationId "com.example.mydrysister"
-        minSdkVersion 15
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId "com.coderpig.drysisters"
+        minSdkVersion depend_android["minSdkVersion"]
+        targetSdkVersion depend_android["targetSdkVersion"]
+        versionCode 3
+        versionName "1.0.2"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        release {
+            signingConfig signingConfigs.release
+//            minifyEnabled true
+//            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation depend_lib["junit"]
+    implementation depend_lib["appcompat-v7"]
+    implementation depend_lib["design"]
+    implementation depend_lib["cardview"]
+    implementation depend_lib["constraint-layout"]
+    implementation depend_lib["phoneView"]
+    implementation depend_lib["slidr"]
+    implementation depend_lib["roundedimageview"]
+    implementation depend_lib["rxjava"]
+    implementation depend_lib["rxandroid"]
+    implementation depend_lib["okhttp"]
+    implementation depend_lib["okhttp-interceptor"]
+    implementation depend_lib["retrofit"]
+    implementation depend_lib["converter-gson"]
+    implementation depend_lib["rxjava2-adapter"]
+    implementation depend_lib["glide"]
+    annotationProcessor depend_lib["glide-compiler"]
+    implementation depend_lib["timber"]
+
 }
