--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config/dependencies.gradle'
 
 buildscript {
     repositories {
-        google()
+        maven { url 'https://jitpack.io' }
         jcenter()
-        
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-        
+        classpath 'com.android.tools.build:gradle:3.0.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,12 +16,13 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven { url 'https://jitpack.io' }
         jcenter()
-        
+        google()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
